--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,23 +3,28 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layouts :: header"></head>
 <body>
+
+<!-- Navigation bar -->
 <nav th:replace="layouts :: navbar"></nav>
 
 <div class="container">
 
-        <!-- Table of Adding Customer -->
-        <table id="customerTable" class="table table-bordered table-hover">
-            <thead>
-            <tr>
-                <th id="firstname">Firstname</th>
-                <th id="lastname">Lastname</th>
-                <th>Email</th>
-                <th>Supervisor</th>
-            </tr>
-            </thead>
-            <tbody id="studentTable">
-            </tbody>
-        </table>
+    <!-- Table to show data bar -->
+    <table id="customerTable" class="table">
+        <thead>
+        <tr>
+            <th scope="col">StudentId</th>
+            <th scope="col">Firstname</th>
+            <th scope="col">Lastname</th>
+            <th scope="col">Email</th>
+            <th scope="col">Supervisor</th>
+            <th scope="col">Options</th>
+        </tr>
+        </thead>
+        <tbody id="studentTable">
+
+        </tbody>
+    </table>
 
     </div>
 </div>
